<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_index"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_index" />

        <item
            android:id="@+id/nav_site"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_site" />

        <item
            android:id="@+id/nav_theme"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_theme" />

        <item
            android:id="@+id/nav_weekly"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_weekly" />

        <item
            android:id="@+id/nav_my"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_my" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_model"
                android:title="@string/nav_model" />

            <item
                android:id="@+id/nav_download"
                android:title="@string/nav_download" />

            <item
                android:id="@+id/nav_setting"
                android:title="@string/nav_setting" />
        </menu>
    </item>

</menu>
